# gopack

./: .gitignore  .goreleaser.yaml  NOTICE  README.md  go.mod  main.go
.github/actions/setup-gopack/: action.yml
clients/gopack-client/: README.md  pyproject.toml
clients/gopack-client/src/gopack_client/: __init__.py  __main__.py  _binary.py
cmd/: build.go  build_test.go  cache.go  cache_test.go  root.go  version.go  version_test.go
docs/: architecture.md  benchmarks.md  getting-started.md  limitations.md  protocol.md  roadmap.md  tutorial.md  validation.md
examples/basic/: README.md  main.py
examples/benchmark/: README.md
examples/benchmark/scripts/: aggregate.py  config.sh  gopack_build.sh  lib.sh  machine.sh  pyinstaller_build.sh  run.sh  setup.sh  startup.sh
examples/data-report/: README.md  run.py
examples/data-report/salesreport/: generate.py  report.py  transform.py
examples/django-notes/: README.md  manage.py
examples/django-notes/config/: asgi.py  settings.py  urls.py  wsgi.py
examples/django-notes/notes/: admin.py  models.py  urls.py  views.py
examples/fastapi-service/: README.md  requirements.txt  run.py
examples/fastapi-service/app/: main.py  models.py  store.py
examples/ml-iris/: README.md  run.py
internal/assemble/: assemble.go  assemble_test.go  dod_test.go  integration_test.go
internal/bundle/: bundle.go  bundle_test.go  extract.go  launch.go  run.go
internal/cpython/: cpython.go  cpython_test.go
internal/nativelibs/: nativelibs.go  nativelibs_test.go
internal/stage/: stage.go  stage_test.go
launcher/: main.go
(+16 files in other folders)
