[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gopack-client"
version = "0.1.0"
description = "Installer and launcher for gopack, a deployment bundler for Python."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [{ name = "Levi Chinecherem Chidi" }]
keywords = ["python", "bundler", "deployment", "packaging", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/Go-Python-Toolchain/gopack"
Source = "https://github.com/Go-Python-Toolchain/gopack"
Issues = "https://github.com/Go-Python-Toolchain/gopack/issues"

[project.scripts]
gopack = "gopack_client.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gopack_client"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md"]
